--- a/src/main/resources/templates/userCreate.html
+++ b/src/main/resources/templates/userCreate.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h2>Add new user</h2>
-<form th:method="POST" th:action="@{/userCreate}" th:object="${users}">
+<form th:method="POST" th:action = "@{/userCreate}" th:object="${users}">
     <label for="firstName">Enter name: </label>
     <input type="text" th:field="*{firstName}" id="firstName"/>
 
@@ -16,7 +16,22 @@
     <label for="email">Enter email: </label>
     <input type="text" th:field="*{email}" id="email"/>
 
+    <label for="password">Enter password: </label>
+    <input type="text" th:field="*{password}" id="password"/>
+
+    <label>Role:
+        <select size="2" multiple name="roles" th:field="*{roles}" >
+            <option value="1">USER</option>
+            <option selected="selected" value="2">ADMIN</option>
+        </select>
+    </label>
+
     <input type="submit" value="Save"/>
+
 </form>
+
+<input type = "button" value = "Logout"
+       onclick = "window.location.href = '/logout'"/>
+
 </body>
 </html>
