--- a/src/main/resources/templates/userUpdate.html
+++ b/src/main/resources/templates/userUpdate.html
@@ -5,8 +5,12 @@
     <title>Update User</title>
 </head>
 <body>
+<!--th:action="@{/userUpdate.html{id}(id=${user.getId()})}"-->
 <div>
-    <form th:method="POST" th:action="@{/admin/{id}(id=${user.getId()})}" th:object="${users}">
+    <form th:method="POST"
+          th:action="@{/updateUser}"
+          th:object="${users}">
+
         <input hidden="hidden" type="number" th:field="*{id}" id="idAdd" placeholder="id">
         <label for="firstNameUpdate">FirstName</label>
         <input type="text" th:field="*{firstName}" id="firstNameUpdate" placeholder="Name">
@@ -17,15 +21,28 @@
         <label for="emailUpdate">Email</label>
         <input type="text" th:field="*{email}" id="emailUpdate" placeholder="Email">
 
-        <label for="passwordUpdate">Email</label>
-        <input type="text" th:field="*{password}" id="passwordUpdate" placeholder="Password">
+        <label for="passwordUpdate">Password</label>
+        <input type="password" th:field="*{password}" id="passwordUpdate" placeholder="Password">
+
+<!--        <label for="roleUpdate">Role</label>-->
+<!--        <input type="text" th:field="ROLE_ADMIN" id="roleUpdate" placeholder="Role">-->
+<!--        <input type="text" th:field="ROLE_USER" id="roleUpdate2" placeholder="Role">-->
 
         <label>Role:
-            <select size="2" multiple name="roles" >
-                <option value="1">ADMIN</option>
-                <option selected="selected" value="2">USER</option>
+            <select name="role" multiple size="2">
+                <option th:each="role : ${roles}"
+                        th:value="${role.getId()}"
+                        th:text="${role.getRole()}">
+                </option>
             </select>
         </label>
+
+<!--        <label>Role:-->
+<!--            <select size="2" multiple name="role" >-->
+<!--                <option value="1">ADMIN</option>-->
+<!--                <option selected="selected" value="2">USER</option>-->
+<!--            </select>-->
+<!--        </label>-->
 
         <input type="submit" value="Update User">
     </form>
