--- a/src/main/resources/templates/userCreate.html
+++ b/src/main/resources/templates/userCreate.html
@@ -7,14 +7,14 @@
 <body>
 <h2>Add new user</h2>
 <form th:method="POST" th:action = "@{/userCreate}" th:object="${users}">
-    <label for="firstName">Enter name: </label>
-    <input type="text" th:field="*{firstName}" id="firstName"/>
+    <label for="email">Enter Email: </label>
+    <input type="text" th:field="*{username}" id="email"/>
 
     <label for="lastName">Enter last name: </label>
     <input type="text" th:field="*{lastName}" id="lastName"/>
 
-    <label for="email">Enter email: </label>
-    <input type="text" th:field="*{email}" id="email"/>
+    <label for="firstName">Enter firstName: </label>
+    <input type="text" th:field="*{firstName}" id="firstName"/>
 
     <label for="password">Enter password: </label>
     <input type="text" th:field="*{password}" id="password"/>
@@ -29,7 +29,7 @@
         <select name="role" multiple size="2">
             <option th:each="role : ${roles}"
 
-                    th:text="${role.getRole()}">
+                    th:text="${role.getName()}">
             </option>
         </select>
     </label>
