JSON works well

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -132,7 +132,7 @@
                                                                    id="Edit_id1" placeholder="ID"
                                                                    aria-describedby="basic-addon1" disabled>
 
-                                                            <label for="Edit_username1" class="form-label text-center pt-3 h6"><b>User Name</b></label>
+                                                            <label for="Edit_username1" class="form-label text-center pt-3 h6"><b>Username</b></label>
                                                             <input type="text" name="username" class="form-control"
                                                                    id="Edit_username1" placeholder="username"
                                                                    aria-describedby="basic-addon1" disabled>
